--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,6 +8,7 @@
 
 html {
   font-size: 62.5%;
+  height: 100%;
 
   @include respond(tab-land) {
     // width < 1200?
@@ -26,6 +27,7 @@ html {
 
 body {
   box-sizing: border-box;
+  height: 100%;
   font-family: "Rubik", sans-serif;
   background-color: $primary-blue;
   font-size: 1.5rem;
