--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -12,6 +12,8 @@
     border-radius: 0;
     padding: 15rem 5rem;
     margin-top: -20rem;
+    -webkit-transform: translateZ(0);
+    transform: translateZ(0);
     // width: 100%;
     -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
     clip-path: polygon(0 10vh, 100% 0, 100% 98%, 0 100%);
