--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -7,6 +7,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  margin-bottom: -20vh;
   will-change: opacity;
 
   color: $white;
