--- a/public/css/style.css
+++ b/public/css/style.css
@@ -324,13 +324,13 @@ p {
   border-radius: 3.6rem;
   max-width: 113rem;
   margin: 0 auto;
+  margin-top: -15vh;
   padding: 4rem 5rem; }
   @media only screen and (max-width: 56.25em) {
     .main-card {
       border-radius: 0;
       padding: 15rem 5rem;
-      -webkit-transform: translateZ(0);
-      transform: translateZ(0);
+      margin-top: 0;
       -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
       clip-path: polygon(0 10vh, 100% 0, 100% 98%, 0 100%); } }
 
