--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -5,14 +5,13 @@
   border-radius: 3.6rem;
   max-width: 113rem;
   margin: 0 auto;
-  // margin-top: -15vh;
+  margin-top: -15vh;
   padding: 4rem 5rem;
 
   @include respond(tab-port) {
     border-radius: 0;
     padding: 15rem 5rem;
-    -webkit-transform: translateZ(0);
-    transform: translateZ(0);
+    margin-top: 0;
     // width: 100%;
     -webkit-clip-path: polygon(0 15vh, 100% 0, 100% 100%, 0 100%);
     clip-path: polygon(0 10vh, 100% 0, 100% 98%, 0 100%);
