limit hero height phone

--- a/public/css/style.comp.css
+++ b/public/css/style.comp.css
@@ -126,6 +126,9 @@ p {
   will-change: opacity;
   color: #ffffff;
   text-align: center; }
+  @media only screen and (max-width: 37.5em) {
+    .hero {
+      height: 75vh; } }
   .hero--container {
     padding: 3rem 0;
     display: grid;
