--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -13,6 +13,10 @@
   color: $white;
   text-align: center;
 
+  @include respond(phone) {
+    height: 75vh;
+  }
+
   &--container {
     padding: 3rem 0;
     display: grid;
