set temporary language settings

--- a/views/index-en.ejs
+++ b/views/index-en.ejs
@@ -79,25 +79,23 @@
 
       <article id="quantum-revolution" class="article">
         <h4 class="heading-quartiary">The quantum revolution</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
-          dignissim,
-          ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
-          Pellentesque
-          accumsan suscipit nisl. Suspendisse quis felis est. Maecenas a diam ullamcorper, cursus odio ut, consequat
-          ante.
-          Nulla sed felis arcu. Praesent sodales sem elementum, accumsan orci rutrum, commodo ipsum. Duis erat nisi,
-          vestibulum eget euismod nec, aliquet quis arcu. Etiam pretium nulla eu feugiat vulputate. Nunc auctor
-          mauris
-          erat, non tincidunt odio imperdiet quis.</p>
+        <p>Quantum Computing (QC) consists of a new way of storing,
+          process and transmit data according to the logic of the quantum world. It will bring a
+          substantial impact on the industry - from health products, pharmaceuticals,
+          systems of manufacturing, finance and communication. It will not only enable
+          do things faster than traditional computing, but also
+          transform your processes and products. Great experts believe that
+          quantum computers are no longer decades away. The quantum era
+          has come and it is now imperative that managers and leaders understand the
+          commercial implications of this new frontier of knowledge and be prepared for the
+          break.</p>
 
-        <p>Duis eget dapibus nulla, ac egestas enim. Donec non fringilla leo. In porttitor risus non dapibus
-          imperdiet.
-          Morbi eget metus id massa egestas facilisis sit amet a erat. Morbi varius mollis tortor, ut rutrum erat
-          rutrum
-          eu. Sed interdum eu nunc a bibendum. Suspendisse id libero euismod, aliquet sem vitae, luctus nibh. Nunc
-          non
-          posuere arcu. Curabitur nulla ipsum, pharetra vitae augue sed, convallis auctor nisi. Pellentesque tempus
-          rhoncus libero eget pharetra.</p>
+        <p>Among the main applications foreseen for Quantum Computation is the solving of problems of optimization,
+          finance, machine learning, development of new materials, drugs and chemical processes. Another outstanding
+          application is in encryption. Some current technologies such as RSA encryption and blockchain (of which
+          bitcoin makes use in particular) would be vulnerable to attack by a quantum computer, since it could find
+          prime factors of an integer in time
+          exponentially smaller than a classic computer.</p>
       </article>
 
       <hr>
@@ -106,51 +104,42 @@
         <h4 id="security" class="heading-quartiary">Security</h4>
         <article class="products--security">
           <div class="products--content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus mollis malesuada. Phasellus
-              dignissim,
-              ligula eu imperdiet egestas, est tortor efficitur nulla, pellentesque molestie mi ante a nunc.
-              Pellentesque
-              accumsan suscipit nisl. Suspendisse quis felis est. Maecenas a diam ullamcorper, cursus odio ut,
-              consequat
-              ante.
-              Nulla sed felis arcu. Praesent sodales sem elementum, accumsan orci rutrum, commodo ipsum. Duis erat
-              nisi,
-              vestibulum eget euismod nec, aliquet quis arcu. Etiam pretium nulla eu feugiat vulputate. Nunc auctor
-              mauris
-              erat, non tincidunt odio imperdiet quis.</p>
+            <p>Is your company protected from the threats of quantum computers? The encryption used today is based on
+              the fact that a conventional computer can take up to hundreds of thousands of years to break it. With a
+              functional quantum computer, this time tends to drop to minutes or even seconds. In this way, most of the
+              cryptographic algorithms currently used need to be changed or the size of the key used needs to be
+              increased (depending on the math function / mechanism used by the cryptographic algorithm).</p>
 
-            <p>Duis eget dapibus nulla, ac egestas enim. Donec non fringilla leo. In porttitor risus non dapibus
-              imperdiet.
-              Morbi eget metus id massa egestas facilisis sit amet a erat. Morbi varius mollis tortor, ut rutrum erat
-              rutrum
-              eu. Sed interdum eu nunc a bibendum. Suspendisse id libero euismod, aliquet sem vitae, luctus nibh. Nunc
-              non
-              posuere arcu. Curabitur nulla ipsum, pharetra vitae augue sed, convallis auctor nisi. Pellentesque
-              tempus
-              rhoncus libero eget pharetra.</p>
+            <p>Quanby, a quantum technology company, specializes in this issue and provides security advice to companies
+              that make use of technology and need their systems to remain secure in this new era. We keep our customers
+              up-to-date on the latest in post-quantum cryptography.</p>
+
+            <p>Interested in ensuring the secure communication of your systems and keeping your confidential data
+              protected from intruders in the quantum era?
+              We performed a detailed survey of the cryptographic mechanisms employed by the company's computer systems,
+              identifying vulnerabilities and suggesting changes that will keep their systems current in the era of
+              quantum computers.</p>
           </div>
           <img class="products--image" src="/img/binary-code.svg" alt="Monitor displaying binary code">
         </article>
 
         <h4 id="personal-dev" class="heading-quartiary align-right">Personal development</h4>
         <article class="products--personal-dev align-right">
-          <p>Aliquam nec vestibulum enim. Etiam id felis ut mi faucibus iaculis. Nulla lobortis molestie massa ut
-            condimentum. Sed at vestibulum massa. Suspendisse nec dui risus. Proin ac ex non quam pulvinar tincidunt
-            vel
-            at leo. Curabitur eu nunc mollis, vestibulum odio eget, vulputate diam. Aliquam ut massa augue. Nunc a
-            blandit sem, sed interdum est. In euismod rutrum elementum.</p>
+          <p>Quanby seeks to solve problems of difficult resolution by classical computing, creating algorithms and
+            using the most effective quantum processors built to date. We create customized solutions for various areas
+            of the industry.
+            Make us understand your problems, that we will make a proposal to solve them through quantum computing.</p>
 
           <img class="products--image" src="/img/coding.svg" alt="Monitor displaying binary code">
         </article>
 
         <h4 id="linear-systems" class="heading-quartiary">Linear systems</h4>
         <article class="products--linear-systems">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod est ut dui facilisis, et tempor
-            sapien
-            consequat. Vestibulum interdum quam non lobortis cursus. Nam finibus erat eget erat tempor aliquet.
-            Etiam
-            vestibulum ipsum dolor, vitae ultrices nibh pellentesque a. Fusce in tempus magna, quis gravida orci. Ut
-            vulputate at tellus in vehicula. Ut a tincidunt sem, eu efficitur risus.</p>
+          <p>Desenvolvemos algoritmos quânticos para resolução de sistemas lineares (HHL) e para resolução de equações
+            diferenciais parciais. Aplicamos esta solução de forma isolada ou híbrida, no caso, com ou sem a interação
+            com a computação clássica.
+            Simulamos soluções robustas com alto desempenho, velocidade e qualidade na entrega.
+          </p>
 
           <img class="products--image" src="/img/calculator.svg" alt="Monitor displaying binary code">
         </article>
@@ -181,12 +170,12 @@
       </div>
       <hr>
       <div class="footer--contact">
-        <a class="media" href="https://www.youtube.com">
+        <a class="media" href="https://www.youtube.com/channel/UCf4_g-7pilwh9ilVobgKVVw">
           <i class="fab fa-youtube"></i>
         </a>
         <div class="footer--contact-info">
           <a href="mailto:quanby.quantica@gmail.com" class="email">quanby.quantica@gmail.com</a><br>
-          <a href="tel:999999999" class="number">+55 (0XX) 9XXXX.XXXX</a>
+          <a href="tel:55048996235796" class="number">+55 (048) 99623.5796</a>
           <br><br>
           <br>
           <address>Florianópolis, Santa Catarina - Brasil</address>
